# ChangeLog for media-gfx/gthumb
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/gthumb/ChangeLog,v 1.102 2009/05/20 17:42:05 armin76 Exp $

  20 May 2009; Raúl Porcel <armin76@gentoo.org> gthumb-2.10.11.ebuild:
  ia64 stable wrt #266713

  15 May 2009; Markus Meier <maekke@gentoo.org> gthumb-2.10.11.ebuild:
  amd64 stable, bug #266713

  06 May 2009; Christian Faulhammer <fauli@gentoo.org>
  gthumb-2.10.11.ebuild:
  stable x86, bug 266713

  19 Apr 2009; Brent Baude <ranger@gentoo.org> gthumb-2.10.11.ebuild:
  Marking gthumb-2.10.11 ppc64 and ppc for bug 266713

*gthumb-2.10.11 (25 Feb 2009)

  25 Feb 2009; Gilles Dartiguelongue <eva@gentoo.org> -gthumb-2.10.8.ebuild,
  -gthumb-2.10.9.ebuild, +gthumb-2.10.11.ebuild:
  Bump to 2.10.11. Bug fixes, provide better gvfs compatibility.
  Cleanup old releases.

  14 Feb 2009; Brent Baude <ranger@gentoo.org> gthumb-2.10.10.ebuild:
  stable ppc, bug 255850

  27 Jan 2009; Raúl Porcel <armin76@gentoo.org> gthumb-2.10.10.ebuild:
  ia64/x86 stable wrt #255850

  23 Jan 2009; Kenneth Prugh <ken69267@gentoo.org> gthumb-2.10.10.ebuild:
  amd64 stable, bug #255850

  23 Jan 2009; Brent Baude <ranger@gentoo.org> gthumb-2.10.10.ebuild:
  stable ppc64, bug 255850

*gthumb-2.10.10 (27 Sep 2008)

  27 Sep 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +gthumb-2.10.10.ebuild:
  Version bump to 2.10.10. Bug fixes and translation updates.

  17 Sep 2008; Brent Baude <ranger@gentoo.org> gthumb-2.10.9.ebuild:
  stable ppc64, bug 236961

  08 Sep 2008; Brent Baude <ranger@gentoo.org> gthumb-2.10.9.ebuild:
  stable ppc, bug 236961

  08 Sep 2008; Raúl Porcel <armin76@gentoo.org> gthumb-2.10.9.ebuild:
  ia64 stable wrt #236961

  07 Sep 2008; Markus Meier <maekke@gentoo.org> gthumb-2.10.9.ebuild:
  amd64/x86 stable, bug #236961

  22 Aug 2008; Markus Meier <maekke@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

*gthumb-2.10.9 (04 Aug 2008)
