@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/gthumb
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/gthumb/ChangeLog,v 1.102 2009/05/20 17:42:05 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gthumb/ChangeLog,v 1.103 2009/05/23 16:08:58 ssuominen Exp $
+
+  23 May 2009; Samuli Suominen <ssuominen@gentoo.org> gthumb-2.10.11.ebuild:
+  Remove comment about unused gtkunique depend wrt #268722, which has been
+  dropped by upstream.
 
   20 May 2009; Raúl Porcel <armin76@gentoo.org> gthumb-2.10.11.ebuild:
   ia64 stable wrt #266713
